--- a/academic/icfp2010/supero.tex
+++ b/academic/icfp2010/supero.tex
@@ -951,25 +951,25 @@ GHC fails to eliminate all the lists and higher-order functions, which in turn m
 \begin{table}
 \begin{tabular}{@@{}lrrrr}
 \textbf{Program} & \textbf{Compile time} & \textbf{Runtime} & \textbf{Memory} & \textbf{Size} \\
-append \\
-bernouilli & 2.4 + 1.3 & 1.04 & 1.02 & 1.02 \\
-charcount \\
-digits-of-e2 & 2.0 + 0.8 & 0.40 & 0.55 & 0.99 \\
+append & 0.1 + 0.6 & 0.85 & 0.84 & 1.00 \\
+bernouilli & 2.4 + 1.3 & 1.04 & 0.96 & 1.02 \\
+charcount & 0.1 + 0.6 & 0.14 & 0.01 & 0.99 \\
+digits-of-e2 & 2.0 + 0.8 & 0.40 & 0.45 & 0.99 \\
 exp3\_8 & 0.5 + 0.8 & 0.93 & 1.00 & 1.08 \\
-factorial \\
-linecount \\
-primes & 0.1 + 0.6 & 0.58 & 0.41 & 0.99 \\
-raytracer \\
+factorial & 0.1 + 0.6 & 0.98 & 1.00 & 1.00  \\
+linecount & 0.2 + 0.6 & 0.01 & 0.01 & 0.98 \\
+primes & 0.1 + 0.6 & 0.58 & 0.81 & 0.99 \\
+raytracer & 0.1 + 0.6 & 0.56 & 0.44 & 1.00 \\
 rfib & 0.1 + 0.7 & 0.77 & 1.01 & 0.98 \\
-sumsquare \\
-sumtree \\
+sumsquare & 1.2 + 0.9 & 0.38 & 0.23 & 1.03 \\
+sumtree & 0.1 + 0.6 & 0.14 & 0.01 & 1.00 \\
 tak & 0.1 + 0.6 & 0.79 & 1.01 & 0.98 \\
-treeflip \\
-wordcount \\
-x2n1 & 0.1 + 0.8 & 0.90 & 1.00 & 1.00 \\
+treeflip & 0.1 + 0.6 & 0.57 & 0.45 & 1.01 \\
+wordcount & 0.3 + 0.7 & 0.19 & 0.30 & 1.00 \\
+x2n1 & 0.1 + 0.8 & 0.90 & 0.99 & 1.00 \\
 \end{tabular}
 \\ \\
-\textbf{Program} is the name of the program as given in \S\ref{sec:benchmarks}. \textbf{Compile time} is the number of seconds to compile the program ($a+b$), including both compilation with our supercompiler ($a$) and the subsequent compilation with GHC ($b$). The final three columns are relative to \texttt{ghc -O2} being 1.00, with a lower number being better. \textbf{Runtime} is how long the optimised program takes to run. \textbf{Memory} is the maximum resident heap size of the optimised program. \textbf{Size} is the size of the optimised program on disk.
+\textbf{Program} is the name of the program as given in \S\ref{sec:benchmarks}. \textbf{Compile time} is the number of seconds to compile the program ($a+b$), including both compilation with our supercompiler ($a$) and the subsequent compilation with GHC ($b$). The final three columns are relative to \texttt{ghc -O2} being 1.00, with a lower number being better. \textbf{Runtime} is how long the optimised program takes to run. \textbf{Memory} is the amount of memory allocated on the heap. \textbf{Size} is the size of the optimised program on disk.
 \caption{Benchmark results.}
 \label{tab:results}
 \end{table}
